--- a/src/css/solExtCore.css
+++ b/src/css/solExtCore.css
@@ -5,3 +5,30 @@
 @import url("components/query.css");
 @import url("components/admonition.css");
 @import url("components/calculator.css");
+
+:root {
+    --solext-tabs-height: 40px;
+    --solext-head-height: 48px;
+    --solext-ui-text-size: 13px;
+
+    --solext-font-fira-sans: 'Fira Sans', sans-serif;
+    --solext-font-aiwriter-quattro: 'iA Writer Quattro', sans-serif;
+    --solext-font-default-inter: 'Inter', sans-serif;
+
+    --solext-font-os-system: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+    --solext-font-fira-code: "FiraCode Nerd Font", "Fira Code", Monaco, Menlo, Consolas, "COURIER NEW", monospace;
+
+    --solext-code-font: var(--solext-font-fira-code);
+    --solext-ui-font: var(--solext-font-os-system);
+
+    --solext-red: #d3455b;
+    --solext-orange: #f09000;
+    --solext-yellow-dark: #e6af19;
+    --solext-yellow: #f9d86c;
+    --solext-green: #27ae9e;
+    --solext-blue: #2c89d9;
+    --solext-purple: #9c739c;
+    --solext-cherry: #c8896a;
+
+    --solext-gray: #AAAAAA60;
+}
